# zero2prod

./: Cargo.toml  LICENSE  configuration.yaml
.github/workflows/: actions.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
