[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Kyle Wiseman <wisek414@icloud.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.6.10"
axum-test-helper = "0.2.0"
hyper = { version = "0.14.25", features = ["full"] }
tokio = {version = "1.26.0", features = ["full"] }
serde = {version = "1.0.155", features = ["derive"]}


[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]