[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Kyle Wiseman <wisek414@icloud.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.6.10"
hyper = { version = "0.14.25", features = ["full"] }
tokio = {version = "1.26.0", features = ["full"] }
serde = {version = "1.0.155", features = ["derive"]}
config = "0.13.3"
uuid = {version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
chrono = {version = "0.4.23", default-features = false, features = ["clock"] }
reqwest = "0.11.14"
tower-http = { version = "0.3.5", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]
